Tar i burk TokenUtil fra felles og diverse andre utils